<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:support="http://schemas.android.com/tools">
    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_launcher"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/item_menu_gplus"
        android:title="@string/google_plus"
        app:showAsAction ="never|collapseActionView"
        android:actionProviderClass=
            "android.widget.ShareActionProvider"/>

    <item android:id="@+id/item_menu_fb"
        android:title="@string/facebook"
        app:showAsAction="never|collapseActionView"
        android:actionProviderClass=
            "android.widget.ShareActionProvider"/>



</menu>